# blogger-ai

./: README.md  pyproject.toml  requirements.txt
src/crew_ai_tutorial/: agents.py  crew.py  main.py  tasks.py
src/crew_ai_tutorial/tools/: browser_tool.py  custom_tool.py
